--- a/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
@@ -21,7 +21,12 @@
 						class="dropdown-item" href="#">Aluguel de carro</a>
 				</div></li>
 				
-			
+			<li class="nav-item dropdown"><a
+				class="nav-link dropdown-toggle" href="#" id="dropAdministrativo"
+				data-toggle="dropdown">Administrativo</a>
+				<div class="dropdown-menu">
+					<a class="dropdown-item" href="usuario.jsf">Administrar Usuários</a>
+				</div></li>
 		</ul>
 	</nav>
 </ui:composition>
