--- a/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
@@ -25,8 +25,11 @@
 				class="nav-link dropdown-toggle" href="#" id="dropAdministrativo"
 				data-toggle="dropdown">Administrativo</a>
 				<div class="dropdown-menu">
-					<a class="dropdown-item" href="usuario.jsf">Administrar Usuários</a>
+					<a class="dropdown-item" href="cadastro-usuario.jsf">Cadastrar Usuário</a>
+					<a class="dropdown-item" href="administrar-usuario.jsf">Administrar Usuários</a>
 				</div></li>
+			
+			
 		</ul>
 	</nav>
 </ui:composition>
