--- a/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
@@ -17,8 +17,8 @@
 				class="nav-link dropdown-toggle" href="#" id="dropClientes"
 				data-toggle="dropdown">Serviços</a>
 				<div class="dropdown-menu">
-					<a class="dropdown-item" href="#">Babysitter</a> <a
-						class="dropdown-item" href="#">Aluguel de carro</a>
+					<a class="dropdown-item" href="#">Babysitter</a> 
+					<a class="dropdown-item" href="#">Aluguel de carro</a>
 				</div></li>
 				
 			<li class="nav-item dropdown"><a
@@ -27,6 +27,9 @@
 				<div class="dropdown-menu">
 					<a class="dropdown-item" href="cadastro-usuario.jsf">Cadastrar Usuário</a>
 					<a class="dropdown-item" href="administrar-usuario.jsf">Administrar Usuários</a>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="cadastro-servico.jsf">Cadastrar Serviço</a>
+					<a class="dropdown-item" href="administrar-servico.jsf">Administrar Serviços</a>
 				</div></li>
 			
 			
