--- a/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
@@ -17,8 +17,8 @@
 				class="nav-link dropdown-toggle" href="#" id="dropClientes"
 				data-toggle="dropdown">Serviços</a>
 				<div class="dropdown-menu">
-					<a class="dropdown-item" href="#">Babysitter</a> 
-					<a class="dropdown-item" href="#">Aluguel de carro</a>
+					<a class="dropdown-item" href="servico-babysitter.jsf">Babysitter</a> 
+					<a class="dropdown-item" href="servico-aluguel-carro.jsf">Aluguel de carro</a>
 				</div></li>
 				
 			<li class="nav-item dropdown"><a
