Alteração de layout

--- a/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
@@ -39,4 +39,8 @@
 		</h:form>
 		
 	</nav>
+	<div class="usuarioLogado">
+		<b>Usuario Logado:</b>
+		<h:outputLabel value="#{usuarioBean.usuarioLogado.nomeCompleto}" />
+	</div>
 </ui:composition>
