--- a/projeto-hotel-ateneu/src/main/webapp/resources/css/estilo.css
+++ b/projeto-hotel-ateneu/src/main/webapp/resources/css/estilo.css
@@ -1,8 +1,14 @@
 @charset "ISO-8859-1";
 
 body {
-	background-color: white;
+	background-image: url("#{resource['imagens/imagem-de-fundo-transparente.jpeg']}");
+	width: 100%;
+	height: 100%;
+
+	background-repeat: no-repeat;
 }
+
+
 
 .areaDoCliente{
 	margin: 100px; 
@@ -10,4 +16,8 @@ body {
 
 #botaoLogin {
 	float: right;
+}
+
+.usuarioLogado {
+	float:right;
 }
