--- a/projeto-hotel-ateneu/src/main/webapp/resources/css/estilo.css
+++ b/projeto-hotel-ateneu/src/main/webapp/resources/css/estilo.css
@@ -21,3 +21,21 @@ body {
 .usuarioLogado {
 	float:right;
 }
+
+.rodape {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	background-color: #007bff;
+}
+
+.container #texto-rodape {
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+	color: white;
+}
