--- a/projeto-hotel-ateneu/src/main/webapp/templates/rodape.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/rodape.xhtml
@@ -6,7 +6,7 @@
 	
 	<footer class="rodape">
 		<div class="container">
-			<span id="texto-rodape">Sistema de gerenciamento do hotel Ateneu&#174;</span>
+			<span id="texto-rodape">Projeto realizado pelos alunos do curso de análise e desenvolvimento de sistemas do 4º Semestre&#174; - todos os direitos reservados</span>
 		</div>
 	</footer>
 </ui:composition>
