--- a/projeto-hotel-ateneu/src/main/webapp/resources/css/estilo.css
+++ b/projeto-hotel-ateneu/src/main/webapp/resources/css/estilo.css
@@ -49,16 +49,6 @@ body {
 	color: white;
 }
 
-/*-- Pagina de check-in --*/
-.checkin-dados-clientes{
-	background: white;
-	border-radius: 5px;
-	margin-left: 10px;
-	margin-right: 10px;
-	padding: 5px;
-}
-
-
 /*-- Classes auxiliares--*/
 
 .campo-formulario {
@@ -73,6 +63,13 @@ body {
 	box-shadow: 0px 0px 3px 3px #6495ed;	
 }
 
+.area-formulario {
+	background: white;
+	border-radius: 5px;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding: 5px;
+}
 
 /*-- Mensagens JSF --*/
 .alert {
@@ -80,10 +77,3 @@ body {
 	text-align: center;
 }
 
-.aviso {
-	background-color: yellow;
-}
-
-.info {
-	background-color: blue;
-}
