Monte de atualizações 02/07/2018 17:33

--- a/projeto-hotel-ateneu/src/main/webapp/templates/rodape.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/rodape.xhtml
@@ -4,9 +4,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	
 	
-	<footer class="rodape">
-		<div class="container">
-			<span id="texto-rodape">Projeto realizado pelos alunos do curso de análise e desenvolvimento de sistemas do 4º Semestre&#174; - todos os direitos reservados</span>
-		</div>
-	</footer>
+	<div class="rodape">
+		<span class="texto-rodape">Projeto realizado pelos alunos do curso de análise e desenvolvimento de sistemas do 4º Semestre&#174; - todos os direitos reservados</span>
+	</div>
 </ui:composition>
