--- a/projeto-hotel-ateneu/src/main/webapp/resources/css/estilo.css
+++ b/projeto-hotel-ateneu/src/main/webapp/resources/css/estilo.css
@@ -1,5 +1,11 @@
 @charset "ISO-8859-1";
 
+
+
+
+html {
+	height: 100%;
+}
 body {
 	background-image: url("#{resource['imagens/imagem-de-fundo-transparente.jpeg']}");
 	width: 100%;
@@ -21,32 +27,44 @@ body {
 
 .areaUsuario{
 	width: 100%;
-	height: 40px;
+	height: 30px;
 	background: #e6f9ff;
+	margin-bottom: 15px;
+}
+
+.areaUsuario #titulo-pagina {
+	float:left;
 }
 
 .areaUsuario #usuarioLogado {
-	
 	float:right;
 }
 
-/* -- Rodapé -- */
-.rodape {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	background-color: #007bff;
+.conteudo {
+	min-height: 580px;
 }
 
-.container #texto-rodape {
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-right: -50%;
-	transform: translate(-50%, -50%);
+.conteudo-tela-login {
+	min-height: 580px;
+}
+
+.tudo {
+	position: relative;
+	min-height: 100%;
+}
+
+/* -- Rodapé -- */
+
+.rodape {
+	margin-top: 10px;
+	bottom: 0;
+	width: 100%;
+	background-color: blue;
+	height: 60px;
+}
+.rodape .texto-rodape {
 	color: white;
+	
 }
 
 /*-- Classes auxiliares--*/
