--- a/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
@@ -22,6 +22,7 @@
 					<a class="dropdown-item" href="servico-babysitter.jsf">Babysitter</a>
 					<a class="dropdown-item" href="servico-aluguel-carro.jsf">Aluguel
 						de carro</a>
+					<a class="dropdown-item" href="servico-alimentacao.jsf">Restaurante</a>
 				</div></li>
 
 			<li class="nav-item dropdown"><a
@@ -36,6 +37,14 @@
 					<a class="dropdown-item" href="cadastro-servico.jsf">Cadastrar
 						Serviço</a> <a class="dropdown-item" href="administrar-servico.jsf">Administrar
 						Serviços</a>
+				</div></li>
+				
+			<li class="nav-item dropdown"><a
+				class="nav-link dropdown-toggle text-light" href="#"
+				id="dropRelatorios" data-toggle="dropdown"><i
+					class="fa fa-gears" style="padding-right: 5px;"></i>Relatórios</a>
+				<div class="dropdown-menu">
+					<a class="dropdown-item" href="relatorios.jsf">Gerar Relatórios</a>
 				</div></li>
 
 
