--- a/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/templates/menu-navegacao.xhtml
@@ -42,7 +42,7 @@
 			<li class="nav-item dropdown"><a
 				class="nav-link dropdown-toggle text-light" href="#"
 				id="dropRelatorios" data-toggle="dropdown"><i
-					class="fa fa-gears" style="padding-right: 5px;"></i>Relatórios</a>
+					class="fa fa-bar-chart" style="padding-right: 5px;"></i>Relatórios</a>
 				<div class="dropdown-menu">
 					<a class="dropdown-item" href="relatorios.jsf">Gerar Relatórios</a>
 				</div></li>
